--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "google-auth-library": "^10.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1"
   }
 }
